Fixed layout bug on disqus avatars.

--- a/views/master.sass
+++ b/views/master.sass
@@ -164,6 +164,9 @@ div#content
 
   img
     max-width: 100%
+  div#disqus_thread
+    img
+      max-width: none
 
   code,
   pre
